test/invalid/bytearray_wrong_type.py
# bytearray() with wrong argument type
def main() -> None:
    ba = bytearray(42)  # bytearray() argument must be bytes
